# awsbuildidreg-main-bat

./: .gitignore  README.md  index.html  package-lock.json  package.json  启动开发模式.bat  打包应用.bat
.github/workflows/: build.yml  ci.yml
docs/: INDEX.md
docs/archived/: AWS_CREDENTIALS_SAVE.md  AWS_OAUTH_CAPTURE_GUIDE.md  AWS_SSO_LOGIN_ANALYSIS.md  BUILDER_ID_AUTO_CLICK_UPDATE.md  DATABASE_LOCATION.md  IMPLEMENTATION_NOTES.md  KIRO_AUTH_BUTTON_GUIDE.md  KIRO_AUTH_CHECKLIST.md  KIRO_AUTH_EXAMPLES.md  KIRO_AUTO_LOGIN_FLOW.md  KIRO_OAUTH_REAL_IMPLEMENTATION.md  QUICK_REFERENCE.md  REACT_SPA_SOLUTION.md  SIMPLIFIED_OAUTH_FLOW.md  TEST_TOKEN.md
docs/debug/: AUTO_CLICK_DEBUG_GUIDE.md  FINAL_XPATH_FIX.md  HEADLESS_MODE_LIMITATION.md  PROXY_ISSUE.md  URL_COOKIE_DEBUG.md  URL_COOKIE_MONITORING.md
docs/guides/: AWS_SSO_OIDC_GUIDE.md  HOW_TO_GET_SSO_CREDENTIALS.md  IMAP_SETUP_GUIDE.md  KIRO_AUTH_GUIDE.md  KIRO_AUTH_USAGE.md  QUICK_START_KIRO_AUTH.md
docs/summaries/: ALL_SOLUTIONS.md  BUILDER_ID_AUTOMATION_SUMMARY.md  DIALOG_FIX_SUMMARY.md  INTEGRATED_FLOW_SUMMARY.md  KIRO_AUTH_SUMMARY.md  TAB_FIX_SUMMARY.md  TRIGGER_FLOW_SUMMARY.md
scripts/: README.md  check_aws_sso_cache.ps1  check_aws_sso_cache.sh  demo.rs  find_database.ps1
src/: App.css  App.tsx  api.ts  index.css  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: browser_automation.rs  builder_id_automation.rs  commands.rs  database.rs  graph_api.rs  imap_client.rs  integrated_registration.rs  kiro_auth.rs  kiro_oauth.rs  lib.rs  models.rs
src/components/: AccountsTable.css  AccountsTable.tsx  (+8 more)
(+2 files in other folders)
